@@ -1,3 +1,8 @@
+2008-02-25  Douglas S. Blank  <dblank@cs.brynmawr.edu>
+	* src/DateHandler/_DateParser.py: set year += 1
+	* src/gen/lib/date.py: removed slash-date fix
+	* src/gen/lib/test/date_test.py: slash dates sort correctly
+
 2008-02-25  Łukasz Rymarczyk <yenidai(at)poczta(dot)onet(dot)pl>
 	* src/const.py.in: query os.environ for GRAMPSHOME env and use it
 	0001831: A patch allowing using a different home folder than default 
